# adp-multi

./: .gitignore  .project  .travis.yml  LICENSE  README  README.md  adp-multi.cabal  adpcombinators-mcfg.cabal
benchmarks/: Benchmarks.hs  Benchmarks2.hs  ConstraintSolverBenchmark.hs  README  gapc_main.cc  nussinov.gap
benchmarks/ADP/Multi/Rewriting/Benchmarks/: Explicit.hs
benchmarks/Criterion/: Helpers.hs
src/: Main.hs
src/ADP/: Debug.hs  Nussinov.lhs
src/ADP/Multi/: All.hs  Combinators.hs  CombinatorsConstraint.hs  ElementaryParsers.hs  Helpers.hs  Parser.hs  RGExample.hs  Rewriting.hs  RewritingCombinators.hs  RewritingCombinatorsConstraint.hs  SimpleParsers.hs  Tabulation.hs  TabulationTriangle.hs
src/ADP/Multi/Rewriting/: All.hs  Combinators.hs  ConstraintSolver.hs  Explicit.hs  Model.hs  MonadicCpHelper.hs  README  RangesHelper.hs  Simple.hs  YieldSize.hs  YieldSize2.hs
src/Tests/: MonadicCpRegression.hs  MonadicCpTest.hs  RGExample.hs  Te.hs  Test.hs
tests/ADP/: Combinators.hs
tests/ADP/Multi/Rewriting/Tests/: YieldSize.hs
tests/ADP/Tests/: ABABExample.hs  AlignmentExample.hs  CopyExample.hs  CopyTwoTrackExample.hs  Lab.hs  Main.hs  MonadicCpRegression.hs  MonadicCpTest.hs  NestedExample.hs  Nussinov.lhs  NussinovExample.hs  OneStructureExample.hs  PaperExample.hs  RGExample.hs  RGExampleDim2.hs  RGExampleStar.hs  RIGExample.hs  Suite.hs  TermExample.hs  ThesisExample.hs  TreeAlignExample.hs  ZeroStructureTwoBackbonesExample.hs
tests/MCFG/: MCFG.hs
