name:           adp-multi
version:        0.1
cabal-version:  >= 1.6
build-type:     Simple
author:         Maik Riechert
stability:      experimental
bug-reports:    https://github.com/neothemachine/adp-multi/issues
homepage:       http://adp-multi.ruhoh.com
copyright:      2012 Maik Riechert
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.4.1
maintainer:     Maik Riechert
synopsis:       ADP for multiple context-free grammars
category:       Algorithms, Data Structures, Bioinformatics

source-repository head
  type:      git
  location:  git://github.com/neothemachine/adp-multi.git

Flag buildTests
  description: Build test / benchmark executables
  default: False

library 
  build-depends:    base >= 4,
                   array,
                   containers,
                   htrace,
                   mtl,
                   monadiccp
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  ADP.Multi.Combinators,
                   ADP.Multi.Helpers,
                   ADP.Multi.Parser,
                   ADP.Multi.Rewriting.ConstraintSolver,
                   ADP.Multi.Rewriting.Explicit,
                   ADP.Multi.SimpleParsers,
                   ADP.Multi.Tabulation

test-suite MainTestSuite
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   base >= 4,
                   HUnit >= 1.2 && < 2,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   test-framework-hunit
  hs-source-dirs:  src,
                   tests
  ghc-options:     -Wall -rtsopts
  other-modules:   
                   ADP.Multi.Combinators,
                   ADP.Multi.Helpers,
                   ADP.Multi.Parser,
                   ADP.Multi.Rewriting,
                   ADP.Multi.Rewriting.ConstraintSolver,
                   ADP.Multi.Rewriting.Explicit,
                   ADP.Multi.Rewriting.MonadicCpHelper,
                   ADP.Multi.Rewriting.YieldSize,
                   ADP.Multi.SimpleParsers,
                   ADP.Multi.Tabulation,
                   ADP.Tests.Main,
                   ADP.Tests.MonadicCpRegression,
                   ADP.Tests.MonadicCpTest,
                   ADP.Tests.RGExample,
                   ADP.Tests.NestedExample,
                   ADP.Tests.RIGExample,
                   ADP.Tests.OneStructureExample,
                   ADP.Tests.ZeroStructureTwoBackbonesExample
  main-is:         ADP/Tests/Suite.hs

executable adp-multi-benchmarks
  if flag(buildTests)
    build-depends: base >= 4,
                     criterion
  else
    buildable: False
  hs-source-dirs:  benchmarks,
                   src,
                   tests
  ghc-options:     -Wall -rtsopts
  other-modules:   
                   ADP.Tests.RGExample,
                   ADP.Tests.NestedExample,
                   ADP.Tests.RIGExample,
                   ADP.Tests.OneStructureExample,
                   ADP.Tests.ZeroStructureTwoBackbonesExample
  main-is:         ConstraintSolverBenchmark.hs

executable adp-test
  if !flag(buildTests)
    buildable: False
  build-depends:   base >= 4
  hs-source-dirs:  
                   src, 
                   tests
  ghc-options:     -Wall -rtsopts
  main-is:         ADP/Tests/Main.hs
  other-modules:   
                   ADP.Multi.Rewriting.ConstraintSolver,
                   ADP.Multi.Rewriting.Explicit,
                   ADP.Tests.RGExample,
                   ADP.Tests.NestedExample,
                   ADP.Tests.RIGExample,
                   ADP.Tests.OneStructureExample,
                   ADP.Tests.ZeroStructureTwoBackbonesExample

