name:           adpcombinators-mcfg
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         maik

executable adpcombinators
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   array ==0.4.*
  ghc-options:     -Wall
  other-modules:   
                   ADP.Combinators,
                   ADP.Multi.Combinators

